---------------------
(No changes)

Other Changes
---------------------
* SOLR-17620: SolrCloud "live_node" now has metadata: version of Solr, roles (Yuntong Qu, David Smiley)

* SOLR-17879: A Solr node will now fail to start if it's major.minor version (e.g. 9.10) is *lower* than that of any existing
  Solr node in a SolrCloud cluster (as reported by info in "live_node").  (David Smiley)

==================  9.9.1 ==================
Bug Fixes
---------------------
* SOLR-17831: ExitableDirectoryReader always initialized with QueryLimits.NONE (Andrzej Białecki)

* SOLR-17834: Fixed a bug preventing Config API set properties (aka: configoverlay.json) from being used in config file property
  substitution (hossman)

* SOLR-17830: v1 Restore API no longer conflates backup-name and collection-name during validation. (Abhishek Umarjikar via Jason Gerlowski)

* SOLR-17871: Http2SolrClient wasn't honoring idle timeout configuration above 30 seconds -- a regression. (Thomas Wöckinger, David Smiley)

* SOLR-17876: Http2SolrClient: followRedirects=true: if Http2SolrClient was created with followRedirects=true,
  and then was used to create future clients (via builder.withHttpClient), then redirect processing was wrongly
  disabled on the shared instance. (David Smiley)

* SOLR-3696: Fix for LB/Cloud SolrClients that could leak on close() if concurrent request failed and triggered zombie server logic. (hossman)

* SOLR-17883: SolrCLI tools such as "bin/solr zk" can now access jars located in `<install_dir>/lib`.

Dependency Upgrades
---------------------
(No changes)

==================  9.9.0 ==================
New Features
---------------------
* SOLR-17626: Add RawTFSimilarityFactory class. (Christine Poerschke)

* SOLR-17656: New 'skipLeaderRecovery' replica property allows PULL replicas with existing indexes to immediately become ACTIVE (hossman)
